Revise formulas and images in 小技巧 document

--- a/CUMCM/公式上的小技巧.md
+++ b/CUMCM/公式上的小技巧.md
@@ -4,17 +4,19 @@
 
 对于分式被压缩的情况，例如下图
 
-![img](https://pic4.zhimg.com/v2-e217741f4043f31af87d36eb58f3d47b_1440w.jpg)
+![image-20250901210640996](https://sleepy-dog-1376908035.cos.ap-guangzhou.myqcloud.com/202509012307506.png)
 
 我们可以将\\frac命令改为\dfrac，就可以得到下图
 
-<img src="C:\Users\16684\AppData\Roaming\Typora\typora-user-images\image-20250822163505096.png" alt="image-20250822163505096" style="zoom:80%;" />
+<img src="https://sleepy-dog-1376908035.cos.ap-guangzhou.myqcloud.com/202509012310025.png" alt="image-20250822163505096" style="zoom:80%;" />
 
 对于类似发生压缩的公式（例如\sum），我们可以可以修改为\\displaystyle\sum。
 
 ## 公式批注颜色搭配
 
 选用了蓝色的一个渐变
+
+
 
 ```latex
 %========== Precision Cool 色系 ==========
@@ -43,4 +45,4 @@
 
 效果如下
 
-![image-20250822165029978](C:\Users\16684\AppData\Roaming\Typora\typora-user-images\image-20250822165029978.png)
+![image-20250822165029978](https://sleepy-dog-1376908035.cos.ap-guangzhou.myqcloud.com/202509012307132.png)
